--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,14 +6,63 @@ body{
     margin: 0;
 }
 
-main {
-    flex: 1;
-}
-
 footer {
-    padding-bottom: 2%;
+    padding-bottom: 1%;
     text-align: center;
 }
+
+.form-group {
+    margin-bottom: 1rem;
+}
+
+.form-control {
+    padding: 0.75rem;
+    border-radius: 5px;
+    border: 1px solid #4caf50;
+    transition: border-color 0.3s ease;
+}
+
+.form-control:focus {
+    border-color: #198754;
+    outline: none;
+    box-shadow: 0 0 8px rgba(25, 135, 84, 0.3);
+}
+
+.container {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #2c2e33;
+}
+
+.pagination{
+    margin-top: 5px;
+}
+
+.button, .form-control, .dropdown-item {
+    transition: all 0.3s ease-in-out;
+}
+
+.button:hover, .form-control:focus, .dropdown-item:hover {
+    transform: scale(1.05);
+}
+
+
+.table {
+    background-color: #2c2e33;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.btn {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+}
+
+.btn:hover {
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+}
+
 
 .multi-column-dropdown {
     column-count: 1;
@@ -43,9 +92,9 @@ footer {
     display: none;
 }
 
-.titles{
+.titles {
     text-align: center;
-    color: white;
+    color: #fff;
 }
 
 #searchInput{
