--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,10 +27,14 @@ footer {
     outline: none;
     box-shadow: 0 0 8px rgba(25, 135, 84, 0.3);
 }
+.Textcategoria{
+    color:green;
+    font-weight: bold;
+}
 
 .container {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
     background-color: #2c2e33;
 }
