--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@ footer {
 .form-control {
     padding: 0.75rem;
     border-radius: 5px;
-    border: 1px solid #4caf50;
+    border: 1px solid #198754;
     transition: border-color 0.3s ease;
 }
 
@@ -28,15 +28,20 @@ footer {
     box-shadow: 0 0 8px rgba(25, 135, 84, 0.3);
 }
 .Textcategoria{
-    color:green;
+    color:#198754;
     font-weight: bold;
 }
 
+h4.categoria-registros {
+    color: gray;
+}
+
+
 .container {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     padding: 10px;
     border-radius: 10px;
-    background-color: #2c2e33;
+    background-color: #242526;
 }
 
 .pagination{
@@ -44,16 +49,16 @@ footer {
 }
 
 .button, .form-control, .dropdown-item {
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
 .button:hover, .form-control:focus, .dropdown-item:hover {
-    transform: scale(1.05);
+    transform: scale(1.01);
 }
 
 
 .table {
-    background-color: #2c2e33;
+    background-color: #242526;
     border-radius: 10px;
     overflow: hidden;
 }
@@ -148,8 +153,8 @@ footer {
 }
 
 .custom-dropdown-item:hover {
-    background-color: #f8f9fa; 
-    color: #343a40; 
+    background-color: #198754; 
+    color: #fff; 
 }
 
 .dropdown-menu {
