--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,12 @@ max-width: 100%;
 margin-bottom: 0;
 }
 
+.chart-container {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+}
+
 .container {
 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 padding: 10px;
